[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warehouse-openenv"
version = "0.1.0"
description = "Warehouse RL OpenEnv environment"
authors = [{ name = "Ritesh Ubale" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "numpy"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.openenv]
name = "WarehouseRL-v1"
version = "1.0.0"
entry = "inference.py"
output_format = "openenv_v1"
mode = "multi"
