[project]
name = "team-genesis-openenv-warehouse-rl"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "openenv-core>=0.2.0",
  "fastapi",
  "uvicorn",
  "pydantic",
  "numpy",
]


[project.scripts]
server = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.openenv]
mode = "multi"
